--- a/index.html
+++ b/index.html
@@ -21,68 +21,103 @@
     </nav>
   </header>
 
-  <div class="banner border1">
-    Banner
-  </div>
+  <div class="banner"></div>
 
-  <div class="container produtos border1">
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
+  <div class="container">
+    <div>
+      <h2>Promoção</h2>
     </div>
 
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
-    </div>
-
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
-    </div>
-
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
-    </div>
-
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
-    </div>
-
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
-    </div>
-
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
-    </div>
-
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
-    </div>
-
-    <div class="produto border2">
-      <img src="" alt="">
-      <h3>Lorem ipsum dolor sit</h3>
-      <h3>R$ <span>50,00</span></h3>
+    <div>
+      <h2>9 produtos</h2>
     </div>
   </div>
 
-  <footer class="border1">
-    <div class="container border2">Footer</div>
+  <hr>
+
+  <div class="container produtos">
+    <div class="produto">
+      <div class="img-produto"></div>
+      <div class="info-produto">
+        <h3>Lorem ipsum dolor sit</h3>
+        <h3>R$ <span>50,00</span></h3>
+      </div>
+    </div>
+
+    <div class="produto border2">
+      <img src="" alt="">
+      <h3>Lorem ipsum dolor sit</h3>
+      <h3>R$ <span>50,00</span></h3>
+    </div>
+
+    <div class="produto border2">
+      <img src="" alt="">
+      <h3>Lorem ipsum dolor sit</h3>
+      <h3>R$ <span>50,00</span></h3>
+    </div>
+
+    <div class="produto border2">
+      <img src="" alt="">
+      <h3>Lorem ipsum dolor sit</h3>
+      <h3>R$ <span>50,00</span></h3>
+    </div>
+
+    <div class="produto border2">
+      <img src="" alt="">
+      <h3>Lorem ipsum dolor sit</h3>
+      <h3>R$ <span>50,00</span></h3>
+    </div>
+
+    <div class="produto border2">
+      <img src="" alt="">
+      <h3>Lorem ipsum dolor sit</h3>
+      <h3>R$ <span>50,00</span></h3>
+    </div>
+
+    <div class="produto border2">
+      <img src="" alt="">
+      <h3>Lorem ipsum dolor sit</h3>
+      <h3>R$ <span>50,00</span></h3>
+    </div>
+
+    <div class="produto border2">
+      <img src="" alt="">
+      <h3>Lorem ipsum dolor sit</h3>
+      <h3>R$ <span>50,00</span></h3>
+    </div>
+
+    <div class="produto border2">
+      <img src="" alt="">
+      <h3>Lorem ipsum dolor sit</h3>
+      <h3>R$ <span>50,00</span></h3>
+    </div>
+  </div>
+
+  <footer>
+    <div class="container border2">
+      <div>
+        <ul>
+          <li><a href="">Contato</a></li>
+          <li><a href="">Termos de serviço</a></li>
+          <li><a href="">Política de privacidade</a></li>
+          <li><a href="">Cancelamento, troca e reembolso</a></li>
+        </ul>
+      </div>
+
+      <div>
+        Newsletter
+      </div>
+    </div>
+    <hr>
+    <div class="container">
+      <div>
+        Socials
+      </div>
+
+      <div>
+        Master, Visa, PayPal
+      </div>
+    </div>
   </footer>
 </body>
 
